changed color, testing Lighthouse scoring

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -14,12 +14,12 @@
   --acc-orange: #f28e2b;
   --acc-yellow: #edc948;
   --acc-green: #59a14f;
-  --acc-teal: #76b7b2;
+  --acc-teal: #407d7a;
   --acc-blue: #4e79a7;
   --acc-violet: #b07aa1;
   --acc-pink: #ff9da7;
   --acc-grey: #bab0ac;
-  --text-color: #f6faff;
+  --text-color: #ffffff;
 }
 
 body {
