--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -37,23 +37,24 @@ body {
   place-self: center;
   display: grid;
 }
-.main h1,
-.main h2 {
+header {
+  text-align: center;
+}
+header h1,
+header h2 {
   margin: 0.1em;
 }
-.main h1 {
+header h1 {
   font-size: 46px;
-  margin-top: 20px;
-  margin-bottom: 0.1em;
+  margin: 20px 0 0.1em;
 }
-.main h2 {
+header h2 {
   font-size: 28px;
 }
-.main p {
+header p {
   font-style: italic;
   font-size: 20px;
-  margin: 0.1em;
-  margin-bottom: 20px;
+  margin: 0.1em 0 20px;
 }
 
 page {
@@ -101,15 +102,18 @@ page h3 {
   height: auto;
 }
 
-.paper-kawaii-button,
-.button-go-to-top {
+.homepage-button {
   padding: 10px;
   background-color: var(--acc-blue);
   color: var(--text-color);
   text-decoration: none;
-  border-radius: 5px;
-  max-width: 150px;
+  border-radius: 15px;
+  max-width: 250px;
   place-self: center;
+}
+
+.homepage-button:hover {
+  color: var(--acc-orange);
 }
 
 .paper-kawaii-button {
