quick lighthouse fix

--- a/styles/shop-style.css
+++ b/styles/shop-style.css
@@ -132,7 +132,7 @@
   font-weight: 600;
   font-size: 32px;
 }
-.origami-book a {
+.origami-book p {
   line-height: 1.2em;
   font-weight: 400;
   font-size: 24px;
