--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -1,7 +1,7 @@
 .modal-overlay {
   background: rgba(0, 0, 0, 0.7);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   bottom: 0;
