Added security cert

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "BarlowSemiCondensed";
-  src: url("http://www.meetjennawright.com/fontFamily/BarlowSemiCondensed-SemiBold.ttf");
+  src: url("https://www.meetjennawright.com/fontFamily/BarlowSemiCondensed-SemiBold.ttf");
 }
 
 @font-face {
   font-family: "BarlowSemiCondensedRegular";
-  src: url("http://www.meetjennawright.com/fontFamily/BarlowSemiCondensed-Regular.ttf");
+  src: url("https://www.meetjennawright.com/fontFamily/BarlowSemiCondensed-Regular.ttf");
 }
 
 :root {
