--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "BarlowSemiCondensed";
-  src: url("https://jwright2021.github.io/workingPortfolio/fontFamily/BarlowSemiCondensed-SemiBold.ttf");
+  src: url("https://www.meetjennawright.com/fontFamily/BarlowSemiCondensed-SemiBold.ttf");
 }
 
 @font-face {
   font-family: "BarlowSemiCondensedRegular";
-  src: url("https://jwright2021.github.io/workingPortfolio/fontFamily/BarlowSemiCondensed-Regular.ttf");
+  src: url("https://www.meetjennawright.com/fontFamily/BarlowSemiCondensed-Regular.ttf");
 }
 
 :root {
